// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`setValue no delta 1`] = `
{
  "data": {
    "setValue": {
      "__typename": "SetValuePayload",
      "delta": 0,
      "node": {
        "__typename": "ChecklistResult",
        "status": {
          "__typename": "ChecklistOpen",
        },
        "widget": {
          "__typename": "NumberWidget",
          "number": 42,
        },
      },
      "parent": {
        "__typename": "Checklist",
        "status": {
          "__typename": "ChecklistOpen",
        },
      },
    },
  },
}
`;

exports[`setValue entity is not mutable 1`] = `
{
  "data": null,
  "errors": [
    [GraphQLError: Entity is not mutable: foo],
  ],
}
`;

exports[`setValue global id invariant 1`] = `
{
  "data": null,
  "errors": [
    [GraphQLError: Unexpected error value: "invariant violated"],
  ],
}
`;
